# primes

./: LICENSE.txt  README.md
py/: README.md  primes.py  pritchard1.py  pritchard2.py  sorenson.py
rs/: Cargo.toml  README.md
rs/src/: eratosthenes.rs  main.rs  pritchard2.rs  pritchard2bv.rs  sorenson.rs
