[package]
name = "primes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }

[[bin]]
name = "pritchard2"
path = "src/pritchard2.rs"
[[bin]]
name = "pritchard2bv"
path = "src/pritchard2bv.rs"
[[bin]]
name = "sorenson"
path = "src/sorenson.rs"
